--- a/templates/package.json
+++ b/templates/package.json
@@ -4,7 +4,8 @@
   "private": "true",
   "license": "MIT",
   "scripts": {
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "preversion": "node ./scripts/sync-up-version.js && git add ."
   },
   "devDependencies": {
     "@shared/eslint-config": "file:../packages/eslint-config",
@@ -13,9 +14,12 @@
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "lint-staged": "^10.5.4",
+    "load-json-file": "^6.2.0",
     "react-scripts": "^4.0.3",
+    "semver": "^7.3.5",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "write-pkg": "^4.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
