--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -82,7 +82,8 @@
       "teamsfx": [
         {
           "id": "teamsfx-getting-started",
-          "name": "Getting Started"
+          "name": "Getting Started",
+          "when": "!isNewTreeView"
         },
         {
           "id": "teamsfx-accounts",
@@ -90,16 +91,34 @@
         },
         {
           "id": "teamsfx-project",
-          "name": "Project"
+          "name": "Project",
+          "when": "!isNewTreeView"
         },
         {
           "id": "teamsfx-teams-dev-center",
-          "name": "Developer Portal"
+          "name": "Developer Portal",
+          "when": "!isNewTreeView"
         },
         {
           "id": "teamsfx-feedback",
           "name": "Feedback",
-          "visibility": "collapsed"
+          "visibility": "collapsed",
+          "when": "!isNewTreeView"
+        },
+        {
+          "id": "teamsfx-development",
+          "name": "Development",
+          "when": "isNewTreeView"
+        },
+        {
+          "id": "teamsfx-deployment",
+          "name": "Deployment",
+          "when": "isNewTreeView"
+        },
+        {
+          "id": "teamsfx-help-and-feedback",
+          "name": "Help and feedback",
+          "when": "isNewTreeView"
         }
       ]
     },
