--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,6 +47,7 @@
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
     "@types/chai-spies": "^1.0.3",
+    "@types/cli-progress": "^3.9.2",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.3",
@@ -106,6 +107,7 @@
     "axios": "^0.21.1",
     "azure-arm-resource": "^3.1.1-preview",
     "chalk": "^4.1.0",
+    "cli-progress": "^3.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
