--- a/templates/package.json
+++ b/templates/package.json
@@ -13,8 +13,8 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "fs-extra": "^10.0.0",
     "lint-staged": "^10.5.4",
-    "load-json-file": "^6.2.0",
     "react-scripts": "^4.0.3",
     "semver": "^7.3.5",
     "tslint": "^6.1.3",
