--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -71,8 +71,8 @@ jobs:
       - name: Reset test tag
         if: success()
         run: |
-           git tag -f e2e HEAD
-           git push origin -f e2e
+          git tag -f e2e HEAD
+          git push origin -f e2e
 
       - name: Clean the Repo
         run: |
@@ -81,14 +81,14 @@ jobs:
   create-ado-issue:
     runs-on: ubuntu-latest
     needs: e2e-tests
-    if: failure()
+    if: ${{ failure() && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Check git log 
+      - name: Check git log
         id: git-log
         shell: bash
         run: |
