--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -15,7 +15,7 @@
     "test:simpleauth": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/simpleauth/**/*.test.ts\"",
     "test:sql": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/sql/**/*.test.ts\"",
     "test:identity": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/identity/**/*.test.ts\"",
-    "test:appstudio": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/appstudio/**/build.test.ts\"",
+    "test:appstudio": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/appstudio/**/*.test.ts\"",
     "test:spfx": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/spfx/**/*.test.ts\"",
     "test:apim": "nyc mocha --no-timeouts --require ts-node/register \"tests/plugins/resource/apim/**/*.test.ts\"",
     "test:unit": "nyc mocha --no-timeouts --require ts-node/register \"tests/**/*.test.ts\"",
