chore(release): publish detail
 - @microsoft/teamsfx-api@0.5.0-rc.0
 - @microsoft/teamsfx-cli@0.4.0-rc.0
 - @microsoft/teamsfx-core@0.5.0-rc.0
 - @microsoft/teamsfx@0.2.4-rc.0
 - ms-teams-vscode-extension@2.4.0-rc.0
 - templates@0.1.5-rc.0

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "ms-teams-vscode-extension",
   "displayName": "Teams Toolkit (Preview)",
   "description": "Create, debug, and deploy Teams apps with Teams Toolkit",
-  "version": "2.3.1",
+  "version": "2.4.0-rc.0",
   "publisher": "TeamsDevApp",
   "author": "Microsoft Corporation",
   "icon": "media/teams.png",
@@ -578,8 +578,8 @@
     "terser-webpack-plugin": "^4.2.3",
     "tmp": "^0.2.1",
     "ts-loader": "^8.0.3",
-    "ttypescript": "^1.5.12",
     "ts-node": "^9.1.1",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
@@ -592,8 +592,8 @@
     "@azure/identity": "^1.2.1",
     "@azure/ms-rest-nodeauth": "^3.0.7",
     "@azure/msal-node": "^1.0.0-beta.5",
-    "@microsoft/teamsfx-api": "^0.4.0",
-    "@microsoft/teamsfx-core": "^0.4.1",
+    "@microsoft/teamsfx-api": "^0.5.0-rc.0",
+    "@microsoft/teamsfx-core": "^0.5.0-rc.0",
     "async-mutex": "^0.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
