--- a/docs/cicd/github-cd-template.yml
+++ b/docs/cicd/github-cd-template.yml
@@ -18,40 +18,56 @@ jobs:
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
 
-      # If the hosting environment is not provisioned, set this environment variable to true.
-      # or if it's provisioned and has not updates, set this environment variable to false.
-      TEAMSFX_RUN_PROVISION: true 
-      # To specify the version of teamsfx-cli, and if not specified, the default version will be used.
-      TEAMSFX_CLI_VERSION: 0.3.1
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-
-      - name: Provision hosting environment
-        if: env.TEAMSFX_RUN_PROVISION == 'true'
-        uses: OfficeDev/teamsfx-cli-action@v1
+      # Setup environment.
+      - uses: actions/setup-node@v2
         with:
-          commands: provision
-          subscription: ${{env.AZURE_SUBSCRIPTION_ID}}
+          node-version: '14'
 
-      - name: Commit provision configs if necessary
-        if: env.TEAMSFX_RUN_PROVISION == 'true'
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "chore: commit provision configs"
-          file_pattern: .fx/*
-          add_options: "-f"
+      # Build the project.
+      # The way to build the current project depends on how you scaffold it.
+      # Different folder structures require different commands set.
+      - name: Build the project
+        run: cd tabs && npm ci && npm run build
 
-      - name: Validate Teams App's manifest
-        uses: OfficeDev/teamsfx-cli-action@v1
-        with:
-          commands: validate
-          
+      # Run unit test.
+      # Currently, no opinioned solution for unit test provided during scaffolding, so,
+      # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
+      - name: Run Unit Test
+        run: cd tabs && npm run test
+
+      # We suggest to do the provision steps by case manually or in a separated workflow, so just comment the following steps for references.
+      # After provision, you should commit .fx/env.default.json into the repository for later use.
+      # You should pick required secrets from .fx/default.userdata, and save them in the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) which can be refered by the step with name 'Generate default.userdata'. 
+      #- name: Provision hosting environment
+      #  uses: OfficeDev/teamsfx-cli-action@v1
+      #  with:
+      #    commands: provision
+      #    subscription: ${{env.AZURE_SUBSCRIPTION_ID}}
+
+      #- name: Commit provision configs if necessary
+      #  uses: stefanzweifel/git-auto-commit-action@v4
+      #  with:
+      #    commit_message: "chore: commit provision configs"
+      #    file_pattern: .fx/env.default.json
+
+      - name: Generate default.userdata
+        env:
+          USERDATA_TENANT_ID: ${{ secrets.USERDATA_TENANT_ID }}
+          USERDATA_CLIENT_SECRET: ${{ secrets.USERDATA_CLIENT_SECRET }}
+          USERDATA_BOT_PASSWORD: ${{ secrets.USERDATA_BOT_PASSWORD }}
+        run: |
+          [ ! -z "${USERDATA_TENANT_ID}" ] && echo "solution.teamsAppTenantId=${USERDATA_TENANT_ID}" >> .fx/default.userdata
+          [ ! -z "${USERDATA_CLIENT_SECRET}" ] && echo "fx-resource-aad-app-for-teams.clientSecret=${USERDATA_CLIENT_SECRET}" >> .fx/default.userdata
+          [ ! -z "${USERDATA_BOT_PASSWORD}" ] && echo "fx-resource-bot.botPassword=${USERDATA_BOT_PASSWORD}" >> .fx/default.userdata
+
       - name: Deploy to hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
           commands: deploy
 
+      # This step is to pack the Teams App as zip file,
+      # which can be used to be uploaded onto Teams Client for installation.
       - name: Build Teams App's package
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
