--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -1,7 +1,7 @@
 name: "Lint PR"
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - edited
@@ -25,7 +25,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Setup node
         uses: actions/setup-node@v2.1.2
