--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
         with:
-          ref: ${{ github.ref }}
+          ref: ${{ github.base_ref }}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Setup node
         uses: actions/setup-node@v2.1.2
