--- a/docs/cicd/github-ci-template.yml
+++ b/docs/cicd/github-ci-template.yml
@@ -15,9 +15,14 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Checkout the code
+        uses: actions/checkout@v2
+ 
       # Build the project.
       # The way to build the current project depends on how you scaffold it.
       # Different folder structures require different commands set.
+      # 'npm ci' is used here to install dependencies and it depends on package-lock.json.
+      # If you prefer to use 'npm ci', please make sure to commit package-lock.json first, or just change it to 'npm install'.
       - name: Build the project
         run: cd tabs && npm ci && npm run build
 
