chore: add failpoint (#1867)
* chore: add failpoint-ts to repo

* chore: change licence

* chore(core): add fail point

* chore(core): integrate with build pipline

* chore(core): support failpoint syntax

* chore(core): unit test

* chore(core): make everything works

* chore(core): make failpoint work with extension f5

* chore(core): add ut

* chore(core): add readme

* chore(core): improve readme

* chore(core): improve readme format

* fix(core): fix prepare command

* chore: update extension's package-lock

* chore: set failpoint-ts to private

* chore: remove failpoint from package.json

* chore: soft link failpoint

* chore: remove soft link

* chore: copy failpoint runtime files instead of soft-linking them

* chore: fix quote problems

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -496,6 +496,7 @@
     "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
     "compile": "tsc -p ./ && npm run copy-files",
     "build": "rimraf out && npm run compile",
+    "build-failpoint": "rimraf out && npx ttsc -p ./",
     "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./webpack.config.js",
     "package": "rimraf out && webpack --mode production --config ./webpack.config.js",
     "test-compile": "tsc -p ./",
