--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -142,8 +142,7 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "url-join": "^4.0.1",
-    "util": "^0.12.1",
-    "write-pkg": "^4.0.0"
+    "util": "^0.12.1"
   },
   "gitHead": "7d60c0765c0ea8c023a26c10d1c93001c597afbb",
   "publishConfig": {
