--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-core",
-  "version": "0.5.0-rc.2",
+  "version": "0.5.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
@@ -43,7 +43,7 @@
     "@azure/storage-blob": "^12.3.0",
     "@dbpiper/timer": "1.0.0-beta.2",
     "@feathersjs/hooks": "^0.6.5",
-    "@microsoft/teamsfx-api": "^0.5.0-rc.0",
+    "@microsoft/teamsfx-api": "^0.5.0",
     "@types/jwt-decode": "3.1.0",
     "@types/proper-lockfile": "^4.1.1",
     "adm-zip": "^0.5.5",
