fix: format error in .nycrc

--- a/packages/fx-core/.nycrc
+++ b/packages/fx-core/.nycrc
@@ -6,7 +6,7 @@
     "src/**/*.js"
   ],
   "exclude": [
-      "src/plugins/resource/function/utils/depsChecker/**/*"
+      "src/plugins/resource/function/utils/depsChecker/**/*",
       "src/plugins/resource/localdebug/legacyPlugin.ts"
   ],
   "reporter": [
