refactor(localdebug): update localdebug plugin and UX(ext&cli) to use localSettings (#1902)
* refactor: update localdebug plugin and UI(ext&cli) to use localSettings

* fix: add missing type definition in ProjectConfig

* fix: always return the updated local envs in getLocalDebugEnvs

* chore(code-coverage): exclude legacyPlugin.ts in .nycrc as it will be deprecated soon

* fix: path error in .nycrc

* fix: format error in .nycrc

--- a/packages/fx-core/.nycrc
+++ b/packages/fx-core/.nycrc
@@ -6,7 +6,8 @@
     "src/**/*.js"
   ],
   "exclude": [
-      "src/plugins/resource/function/utils/depsChecker/**/*"
+      "src/plugins/resource/function/utils/depsChecker/**/*",
+      "src/plugins/resource/localdebug/legacyPlugin.ts"
   ],
   "reporter": [
     "text",
