--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -117,21 +117,23 @@ jobs:
 
       - name: release templates' alpha version to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
           prerelease: true
-          tag_name: "templates@0.0.0-alpha"
-          files: ./*.zip
+          tag: "templates@0.0.0-alpha"
+          artifacts: ./*.zip
+          allowUpdates: true
 
       - name: release templates' RC version to github
         if: ${{ (contains(steps.version-change.outputs.CHANGED, 'templates@') || contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx')) && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
           prerelease: true
-          tag_name: "templates@0.0.0-rc"
-          files: ./*.zip
+          tag: "templates@0.0.0-rc"
+          artifacts: ./*.zip
+          allowUpdates: true
 
       - name: Create Templates Stable Release
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
@@ -219,8 +221,8 @@ jobs:
 
       - name: release VSCode extension to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') }}
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
-          tag_name: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
-          files: ./packages/**/*.vsix
+          tag: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
+          artifacts: ./packages/**/*.vsix
