--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -115,6 +115,14 @@ jobs:
       - name: generate templates
         run: .github/scripts/template-zip-autogen.sh
 
+      - name: update tag
+        uses: richardsimko/update-tag@v1
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
+        with:
+          tag_name: "templates@0.0.0-alpha"
+        env:
+          GITHUB_TOKEN: ${{ secrets.CD_PAT }}
+
       - name: release templates' alpha version to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
         uses: ncipollo/release-action@v1.7.3
@@ -124,6 +132,14 @@ jobs:
           tag: "templates@0.0.0-alpha"
           artifacts: ./*.zip
           allowUpdates: true
+      
+      - name: update tag
+        uses: richardsimko/update-tag@v1
+        if: ${{ (contains(steps.version-change.outputs.CHANGED, 'templates@') || contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx')) && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
+        with:
+          tag_name: "templates@0.0.0-alpha"
+        env:
+          GITHUB_TOKEN: ${{ secrets.CD_PAT }}
 
       - name: release templates' RC version to github
         if: ${{ (contains(steps.version-change.outputs.CHANGED, 'templates@') || contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx')) && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
